Actualizado los productos

--- a/index.html
+++ b/index.html
@@ -54,23 +54,24 @@
       <h2>Productos destacados</h2>
       <div class="cards">
         <article class="card">
-          <img src="https://via.placeholder.com/400x250?text=Producto+1" alt="Cepillo de bambú">
-          <h3>Cepillo de bambú</h3>
-          <p class="price">$599</p>
+          <img src="products/images/Crema_de_caracol_con_Ginseng_Rojo_–_50_ml_+_15_ml__crema-de-caracol-y-ginseng-rojo-1-d73831f96560b32c5017615124758547-480-0.jpg" alt="Crema de caracol con ginseng rojo">
+          <h3>Crema de caracol con Ginseng Rojo – 50 ml + 15 ml - Skin Eats (Derma Pacific)</h3>
+          <p class="price">$84.249,00</p>
           <a class="btn" href="#">Comprar</a>
         </article>
 
         <article class="card">
-          <img src="https://via.placeholder.com/400x250?text=Producto+2" alt="Jabón natural">
-          <h3>Jabón natural</h3>
-          <p class="price">$350</p>
+          <img src="products/images/Crema_nutritiva_antiarrugas_con_fitoncidas_-_L’amo_crema-antiarrugas.jpg" alt="Antiarrugas con fitoncidas">
+          <h3>Crema nutritiva antiarrugas con fitoncidas - L’amour de Forêt (Double Lee)</h3>
+          <p class="price">$66.299,00</p>
           <a class="btn" href="#">Comprar</a>
         </article>
 
         <article class="card">
-          <img src="https://via.placeholder.com/400x250?text=Producto+3" alt="Bolsa reutilizable">
-          <h3>Bolsa reutilizable</h3>
-          <p class="price">$250</p>
+          <img src="products/images/Espuma_limpiadora_suave_premiun_-_Skin_Eats_(Derma_espuma).jpg
+          " alt="Espuma limpiadora suave premiun">
+          <h3>Espuma limpiadora suave premiun</h3>
+          <p class="price">$35.999,00</p>
           <a class="btn" href="#">Comprar</a>
         </article>
       </div>
